Revision history for Mandel

0.07
       * Rename Model::add_field() to just field()
       * Relationships are now objects

0.06     Sat Oct  5 15:43:51 2013
       * Add support for isa. This also will force numbers to be coerced
         from strings to actual numbers.
       * Add support for perl -Mandel -e'...'
       * Add support for blocking method call

0.05     Sat Oct  5 13:02:14 2013
       * Change has_one/has_many documents point back to the "owner".
       * Add belongs_to relationship

0.04     Tue Oct  1 17:08:53 2013
       * Add support for has_one() and has_many('/json/pointer')
       * Add support for MANDEL_CURSOR_DEBUG=1
       * Add MYMETA* to MANIFEST.SKIP
       * Add Model::new_collection()
       * Rename Model::collection() to Model::collection_name

0.03     Tue Oct  1 12:39:20 2013
       * Fix default collection name on custom document base class
       * Add Mandel::Collection::patch()

0.02     Sat Sep 28 12:02:38 2013
       * Add Mandel::Collection::save()
       * Add Mandel::Document::contains()
       * Add Mandel::connect(), remove ::uri()
       * Add Mandel::model_class()
       * Add Mandel::storage(), remove ::mango()
       * Add builders for attributes, which makes it easier to customize in
         subclass.
       * Add support for custom base class for documents

0.01     Fri Sep 27 18:55:40 2013
       * Released alpha software
       * Add document model
       * Add document base class
       * Add collection managment
       * Add cursor
       * Add support for basic relationship: has_one and has_many
