@@ -3,6 +3,7 @@ Revision history for Mandel
 0.07
        * Rename Model::add_field() to just field()
        * Relationships are now objects
+       * Change related documents are stored using a dbref
 
 0.06     Sat Oct  5 15:43:51 2013
        * Add support for isa. This also will force numbers to be coerced
